@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam style strictuml
hide empty members


package Game
{
    package Elements
    {

        class Element <<Interface>>
            {
                + getElmt() : String
                + getFortContre(): String
                + getFaibleContre() : String
            }

        class Terre implements Element
            {
                + getElmt() : String
                + getFortContre(): String
                + getFaibleContre() : String
            }

        class Eau implements Element
            {
                + getElmt() : String
                + getFortContre(): String
                + getFaibleContre() : String
            }

        class Feu implements Element
            {
                + getElmt() : String
                + getFortContre(): String
                + getFaibleContre() : String
            }

        class Air implements Element
            {
                + getElmt() : String
                + getFortContre(): String
                + getFaibleContre() : String
            }
    }

    package EnsemblePokemon
    {
        class  EnsemblePokemon <<Interface>>
        {
            + getPokemon(index:Integer):Pokemon
            + transferPokemon(pokemon:Pokemon ,desitnation:EnsemblePokemon)
            + getEnsemble()
            + getPokemonByName(nom:String) : Pokemon
            + getNbPokmon() : int
            + getEnsemble() : Pokemon[*]
        }
        class  PokemonGenerateur <<static>>
        {
            - {static} listeNomsPokemon : String[*]
            - {static} listePouvoirs : Pouvoirs[*]
            + {static} genererPokemon()

        }
        class Defausse implements EnsemblePokemon
            {
                - m_defausse : Pokemon[*]
                + <<Create>> Defausse()
                + getPokemon(index:Integer):Pokemon
                + transferPokemon(pokemon:Pokemon ,from:EnsemblePokemon , to:EnsemblePokemon )
                + getPokemonByName(name : String) : Pokemon
                + getNbPokmon() : Integer
                + getEnsemble() : Pokemon[*]
            }

        class MainDuJoueur implements EnsemblePokemon
            {
                - m_mainJoueur: Pokemon[5]
                + <<Create>> MainDuJoueur()
                + getPokemon(index:Integer):Pokemon
                + getPokemonByName(name : String) : Pokemon
                + getNbPokmon() : Integer
                + transferPokemon(pokemon:Pokemon ,from:EnsemblePokemon , to:EnsemblePokemon )
                + getEnsemble() : Pokemon[*]
            }

        class Terrain implements EnsemblePokemon
            {
                - m_terrain: Pokemon[3]
                + <<Create>> Terrain()
                + ajouterPokemon(pokemon:Pokemon)
                + getPokemon(index:Integer): Pokemon
                + getPokemonByName(name : String) : Pokemon
                + getPokemonAvecLeMoinsDeVie() : Pokemon
                + transferPokemon(pokemon:Pokemon , destination:EnsemblePokemon )
                + getEnsemble() : Pokemon[*]
                + getNbPokmon() : Integer

            }

        class Pioche implements EnsemblePokemon
            {
                - m_pioche: Pokemon[*]
                + <<Create>> Pioche()
                + <<Create>> Pioche(nbpokemon:Integer)
                + getPokemonByName(String) : Pokemon
                + getPokemon(index:Integer): Pokemon
                + getEnsemble() : Pokemon[*]
                + getNbPokmon() : Integer
                + transferPokemon(pokemon:Pokemon , to:EnsemblePokemon )
            }
    }

    package Joueur
    {
        class Player <<Interface>>
        {
            + isJoueur1() : Boolean
            + setJoueur1()
            + GetPokemonFromPioche(index:Integer) : Pokemon
            + piocherPokemon(pokemon:Pokemon)
            + placeSurTerrain(pokemon:Pokemon)
            + getM_defausse() : Defausse
            + getM_main() : MainDuJoueur
            + getM_nom() : String
            + getM_terrain() : Terrain
            + joue(adversaire:Player)
        }
        class JoueurHumain implements Player
                    {
                        - m_nom : String
                        - m_joueur1 : Boolean
                        + <<Create>> Joueur(nom: String)
                        + getM_defausse() : Defausse
                        + getM_main() : MainDuJoueur
                        + getM_nom() : String
                        + getM_terrain() : Terrain
                        + getM_pioche() : Pioche
                        + GetPokemonFromPioche(index:Integer) : Pokemon
                        + piocherPokemon(pokemon:Pokemon)
                        + placeSurTerrain(pokemon:Pokemon)
                        + isJoueur1() : Boolean
                        + setJoueur1(etat:Boolean)
                        + piocherPokemon(pokemon:Pokemon)
                        + setPioche(Pioche)

                    }
        class RobotPlayer implements Player
                            {
                                - m_nom : String
                                - m_joueur1 : Boolean
                                + <<Create>> RobotPlayer(nom: String)
                                + GetPokemonFromPioche(index:Integer) : Pokemon
                                + piocherPokemon(pokemon:Pokemon):void
                                + placeSurTerrain(pokemon:Pokemon):void
                                + afficherPioche(): void
                                + afficherMain(): void
                            }
    }

    class Pokemon
    {
        - m_nom: String
        - m_health : int
        - m_atk : int
        + <<Create>> Pokemon(nom: String)
        + Attaquer() : Void
        + getVie() : int
        + getM_attaque() : int
        + getNom() : String
        + presenter() : void
    }

    package Jeu
    {
        class LeJeu
        {
            - m_jHumain : JoueurHumain
            - m_jRobot : RobotPlayer
            - m_numTour : Integer
            - m_arret : Boolean
            + <<Create>> LeJeu(humain:JoueurHumain , robot : RobotPlayer)
            + Lunch(humain:Game.JoueurHumain) : void
            + MainJoueurs(tailleMain: Integer)
            + choix1erJoueur() : void
            + piochesJoueurs() : void
            + placementPokemon() : void
            + verifierFinJeu() : void
            + nbPokemonRestans(joueur Player) : Integer
            + tousPokemonsElimines(joueur Player) : Boolean
            + phaseAttaquer( tour : Integer) : void
            + PokemonMort(pokemon:Pokemon) : Boolean
            + AjouterDefausse(joueur : Player,pokemon Pokemon) : void
            + getM_jHumain() : JoueurHumain
            + getM_jRobot() : RobotPlayer
            + grtM_numTour() : Integer
        }
        abstract Affichage
        {
            + afficherJeu(jeu : LeJeu) : Void
            + afficherMain(main : MainDuJoeur): Void
            + afficherTerrain(terrain : Terrain) : Void
            + afficherPioche(pioche : Pioche) : Void
            + afficherDefausse(defausse : Defausse) : Void
            + afficherPokemon(pokemons : ListePokemon) : Void
        }
    }

}


Pioche "1" *---> "20..21\n-" Pokemon : composé de \t\t >
MainDuJoueur "1" *---> "5\n" Pokemon : composé de \t\t >
Terrain "1" *---> "3\n-" Pokemon : composé de \t\t >
Defausse "1" *---> "*\n-" Pokemon : composé de \t\t >

Player "1" *---> "1\n-m_terrain" Terrain : composé de \t\t >
Player "1" *---> "1\n-m_pioche" Pioche : composé de \t\t >
Player "1" *---> "1\n-m_main" MainDuJoueur : composé de \t\t >
Player "1" *---> "1\n-m_defausse" Defausse : composé de \t\t >
Pokemon "\n 1" *--> "1\n-m_element" Element : Possède\n\n >

Game.EnsemblePokemon.EnsemblePokemon ..> ListePokemon : <<uses>>
LeJeu ..> Player : <<uses>>
LeJeu ..> Affichage : <<uses>>



@enduml
